demo/envoy/ms-b.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - name: inbound_time_grpc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50052
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_time_grpc
                codec_type: AUTO
                route_config:
                  name: inbound_time_grpc
                  virtual_hosts:
                    - name: inbound_time_grpc
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: ms_b_grpc
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: ms_b_grpc
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ms_b_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ms-b
                      port_value: 50052
